main layout is done
-completed navbar -completed footer -some components

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,8 +4,12 @@
 
 @layer components {
   .container {
-    margin-left: auto;
     margin-right: auto;
-    max-width: 80rem;
+    margin-left: auto;
+  }
+  @media (min-width: 1536px) {
+    .container {
+      max-width: 1470px;
+    }
   }
 }
