--- a/styles/global.css
+++ b/styles/global.css
@@ -55,3 +55,24 @@
 .image-backdrop:hover .add-to-cart {
   @apply !opacity-100 backdrop-brightness-75 z-[1];
 }
+
+.badge-striped::before,
+.badge-striped::after {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  display: block;
+  width: 0;
+  height: 0;
+  content: "";
+}
+.badge-striped::before {
+  right: 100%;
+  border: 20px solid #ff324d;
+  border-left-color: transparent;
+}
+.badge-striped::after {
+  left: 100%;
+  border: 20px solid #ff324d;
+  border-right-color: transparent;
+}
