--- a/styles/global.css
+++ b/styles/global.css
@@ -20,7 +20,7 @@
 .btn {
   @apply text-base font-medium;
   @apply p-2;
-  @apply border rounded;
+  @apply transition-all duration-300 ease-in-out border rounded;
 }
 .btn-primary {
   @apply text-white bg-red-light hover:bg-transparent border-red-light hover:text-red-light;
@@ -53,7 +53,7 @@
 
 .image-backdrop:hover .back,
 .image-backdrop:hover .add-to-cart {
-  @apply !opacity-100 backdrop-brightness-75 z-[1];
+  @apply transition-opacity duration-500 ease-in-out !opacity-100 backdrop-brightness-75 z-[1];
 }
 
 .badge-striped::before,
